# cricket-predictor

./: .gitignore  README.md  main.py  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
src/: feature_engineering.py  model.py  parse_cricsheet.py
tests/: test_feature_engineering.py  test_model.py  test_parse_cricsheet.py
