[project]
name = "cricket-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.13.4",
    "isort==6.0.1",
    "matplotlib==3.10.3",
    "numpy==2.2.6",
    "optuna==4.3.0",
    "pandas==2.2.3",
    "playwright>=1.53.0",
    "pytest==8.3.5",
    "python-dotenv==1.1.0",
    "requests==2.33.0",
    "ruff==0.11.11",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
]
